--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,10 @@
 
 2021:
+  - title: Building management system to detect anomalousness with temporal profile
+    author: Donagh S. Horgan and Jan R. Holliday
+    publication: US Patent 11,048,247
+    link: https://patft.uspto.gov/netacgi/nph-Parser?Sect1=PTO1&Sect2=HITOFF&p=1&u=/netahtml/PTO/srchnum.html&r=1&f=G&l=50&d=PALL&s1=11048247.PN.
+
   - title: Adaptive inter-ranging network
     author: James B. Hurley, Michael G. Cronin, Donagh S. Horgan and Graham M. Baitson
     publication: US Patent 10,972,868
